--- a/Login.html
+++ b/Login.html
@@ -128,199 +128,32 @@
 </div>
   
 
-    <footer class="footer">
-        <!-- Begin MailChimp Signup Form -->
-        <div class="tiki-newsletter">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 clearfix">
-                        <div class="tiki-newsletter-title clearfix">
-                            <img class="icon-newsletter" src="image/icon-footer/sprite2.png" alt="">
-                            <h3>Đăng ký nhận bản tin Tiki</h3>
-                            <h5>Đừng bỏ lỡ hàng ngàn sản phẩm và chương trình siêu hấp dẫn</h5>
-                        </div>
-                        <div class="mc-field-group">
-                            <input type="email" placeholder="Địa chỉ email của bạn" class="tiki-home-email form-control"
-                                id="mce-EMAIL">
-                            <span class="tiki-newsletter-helper"></span>
-                        </div>
-                        <button class="button btn btn-home-newsletter" data-index="0">Đăng ký</button>
+<footer class="footer">
+    <!-- Begin MailChimp Signup Form -->
+    <div class="tiki-newsletter">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 clearfix">
+                    <div class="tiki-newsletter-title clearfix">
+                        <img class="icon-newsletter" src="image/icon-footer/sprite2.png" alt="">
+                        <h3>Đăng ký nhận bản tin</h3>
+                        <h5>Đừng bỏ lỡ hàng ngàn sản phẩm và chương trình siêu hấp dẫn</h5>
                     </div>
+                    <div class="mc-field-group">
+                        <input type="email" placeholder="Địa chỉ email của bạn" class="tiki-home-email form-control"
+                            id="mce-EMAIL">
+                        <span class="tiki-newsletter-helper"></span>
+                    </div>
+                    <button class="button btn btn-home-newsletter" data-index="0">Đăng ký</button>
                 </div>
             </div>
         </div>
-        <!--End mc_embed_signup-->
-        <hr class="line-bg-body">
-        <div class="list-footer-nav">
-            <div class="container">
-                <div class="footer-nav" style="margin-right: 15px;width: 262px;">
-                    <h4>HỖ TRỢ KHÁCH HÀNG</h4>
-                    <p class="hotline-number">
-                        Hotline đặt hàng: <a href="tel:18006963">1800-6963</a><br>
-                        <small>(Miễn phí , 8-21h kể cả T7, CN)</small>
-                    </p>
-                    <p class="hotline-number">
-                        Hotline chăm sóc khách hàng: <a href="tel:19006035">1900-6035</a><br>
-                        <small>(1000đ/phút , 8-21h kể cả T7, CN)</small>
-                    </p>
-                    <div class="nav-list">
-                        <a rel="nofollow" href="http://hotro.tiki.vn/hc/vi" target="_blank">Các câu hỏi thường gặp</a>
-                        <a rel="nofollow" href="http://hotro.tiki.vn/hc/vi/requests/new" target="_blank">Gửi yêu cầu hỗ
-                            trợ</a>
-                        <a rel="nofollow" href="http://hotro.tiki.vn/hc/vi/categories/200126644" target="_blank">Hướng
-                            dẫn đặt hàng</a>
-                        <a rel="nofollow" href="http://hotro.tiki.vn/hc/vi/categories/200123960" target="_blank">Phương
-                            thức vận chuyển</a>
-                        <a rel="nofollow" href="https://tiki.vn/doi-tra-de-dang" target="_blank">Chính sách đổi trả</a>
-                        <a rel="nofollow" href="https://tiki.vn/lp/tra-gop" target="_blank">Hướng dẫn mua trả góp</a>
-                        <a rel="nofollow" href="https://hotro.tiki.vn/hc/vi/articles/360000822643" target="_blank">Chính
-                            sách hàng nhập khẩu</a>
-
-                        <p class="hotline-number-normal">
-                            Hỗ trợ khách hàng: <a href="mailto:support@tiki.vn">support@tiki.vn</a>
-                        </p>
-
-                        <p class="hotline-number-normal">
-                            Báo lỗi bảo mật: <a href="mailto:security@tiki.vn">security@tiki.vn</a>
-                        </p>
-
-                    </div>
-                </div>
-                <div class="footer-nav">
-                    <h4>VỀ TIKI</h4>
-                    <div class="nav-list">
-                        <a rel="nofollow" href="https://tiki.vn/gioi-thieu-ve-tiki" target="_blank">Giới thiệu Tiki</a>
-                        <a rel="nofollow" href="http://tuyendung.tiki.vn" target="_blank">Tuyển Dụng</a>
-                        <a rel="nofollow" href="https://tiki.vn/bao-mat-thanh-toan" target="_blank">Chính sách bảo mật
-                            thanh toán</a>
-                        <a rel="nofollow" href="https://tiki.vn/bao-mat-thong-tin-ca-nhan" target="_blank">Chính sách
-                            bảo mật thông tin cá nhân</a>
-                        <a rel="nofollow" href="https://hotro.tiki.vn/hc/vi/articles/115005575826" target="_blank">Chính
-                            sách giải quyết khiếu nại</a>
-                        <a rel="nofollow" href="http://hotro.tiki.vn/hc/vi/articles/201971214" target="_blank">Điều
-                            khoản sử dụng</a>
-                        <a rel="nofollow" href="https://tiki.vn/hoi-sach-online" target="_blank">Hội Sách Online</a>
-                        <a rel="nofollow"
-                            href="http://hotro.tiki.vn/hc/vi/articles/204153170-Các-bước-sử-dụng-Tiki-xu-và-Mã-giảm-giá"
-                            target="_blank">Giới thiệu Tiki Xu</a>
-                        <a rel="nofollow" href="http://tiki.vn/tu-van" target="_blank">Tiki Tư Vấn</a>
-                        <a rel="nofollow" href="https://tiki.vn/chuong-trinh/ban-hang-doanh-nghiep" target="_blank">Bán
-                            hàng doanh nghiệp</a>
-                    </div>
-                </div>
-                <div class="footer-nav">
-                    <h4>HỢP TÁC VÀ LIÊN KIẾT</h4>
-                    <div class="nav-list">
-                        <a rel="nofollow" href="https://tiki.vn/quy-che-hoat-dong-sgdtmdt" target="_blank">Quy chế hoạt
-                            động Sàn GDTMĐT</a>
-                        <!-- <a rel="nofollow" href="http://www.foody.vn" target="_blank">Foody.vn - Ăn gì ở đâu</a>
-                            <a rel="nofollow" href="http://www.ivivu.com" target="_blank">iVIVU.com - Đặt khách sạn giá rẻ</a> -->
-                        <a rel="nofollow" href="https://tiki.vn/ban-hang-cung-tiki" target="_blank">Bán hàng cùng
-                            Tiki</a>
-                    </div>
-                    <!-- <div class="nav-other partner">
-                            <a rel="nofollow" href="http://www.foody.vn" target="_blank">
-                                <img src="https://salt.tikicdn.com/assets/img/icon/logo-foody-vietnam@3x.png" />
-                            </a>
-                            <a rel="nofollow" href="http://www.ivivu.com" target="_blank">
-                                <img src="https://salt.tikicdn.com/assets/img/icon/logo-ivivu@3x.png" />
-                            </a>
-                        </div> -->
-                </div>
-                <div class="footer-nav">
-                    <h4>PHƯƠNG THỨC THANH TOÁN</h4>
-                    <div class="nav-other payment">
-                        <img class="icon-payment" src="image/icon-footer/visa-icon.png" alt="">
-                        <img class="icon-payment" src="image/icon-footer/masterCard-icon.png" alt="">
-                        <img class="icon-payment" src="image/icon-footer/jcb-icon.png" alt="">
-                        <img class="icon-payment" src="image/icon-footer/tienMat-icon.png" alt="">
-                        <img class="icon-payment" src="image/icon-footer/internetBanking-icon.png" alt="">
-                        <img class="icon-payment" src="image/icon-footer/traGop-icon.png" alt="">
-                    </div>
-                </div>
-                <div class="footer-nav">
-                    <h4>KẾT NỐI VỚI CHÚNG TÔI</h4>
-                    <div class="nav-other social-conn">
-                        <a rel="nofollow" href="https://www.facebook.com/tiki.vn/" target="_blank" title="Facebook">
-                            <img class="icon-nav-other" src="image/icon-footer/facebook-icon.png" alt="">
-                        </a>
-                        <a rel="nofollow" href="https://www.youtube.com/user/TikiVBlog" target="_blank" title="Youtube">
-                            <img class="icon-nav-other" src="image/icon-footer/youtube-icon.png" alt="">
-                        </a>
-                        <a rel="nofollow" href="http://zalo.me/589673439383195103" target="_blank" title="Zalo">
-                            <img class="icon-nav-other" src="image/icon-footer/zalo-icon.png" alt="">
-                        </a>
-                    </div>
-                    <h4 class="appstore-title">TẢI ỨNG DỤNG TRÊN ĐIỆN THOẠI</h4>
-                    <div class="nav-other app-store">
-                        <a rel="nofollow" href="https://itunes.apple.com/vn/app/id958100553" target="_blank"
-                            admicro-data-event="100127" admicro-data-auto="1" admicro-data-order="false">
-                            <img src="image/icon-footer/appleStore-icon.png" alt="">
-                        </a>
-                        <a rel="nofollow" href="https://play.google.com/store/apps/details?id=vn.tiki.app.tikiandroid"
-                            target="_blank" admicro-data-event="100128" admicro-data-auto="1"
-                            admicro-data-order="false">
-                            <img src="image/icon-footer/googleStore-icon.png" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr class="line-bg-body">
-
-        <address class="footer-address">
-            <div class="container">
-                <div class="address-office">
-                    <img src="image/icon-footer/diaChiVanPhong-icon.png" alt="" class="icon-location">
-                    <div class="info-address">
-                        <p class="add-real">
-                            <b>Địa chỉ văn phòng:</b>
-                            52 Út Tịch, phường 4, quận Tân Bình, thành phố Hồ Chí Minh
-                        </p>
-                        <p>
-                            Tiki nhận đặt hàng trực tuyến và giao hàng tận nơi, chưa hỗ trợ mua và nhận hàng trực tiếp
-                            tại văn phòng hoặc trung tâm xử lý đơn hàng
-                        </p>
-                    </div>
-                </div>
-                <div class="address-service">
-                    <div class="info-address">
-                        <p class="add-real">
-                            <b>Địa chỉ gửi hàng đổi/trả/bảo hành:</b>
-                            Trung tâm xử lý đơn hàng TIKI - Hẻm số 717, đường Tân Sơn, Phường 12, Quận Gò Vấp, TP. Hồ
-                            Chí Minh
-                        </p>
-                        <p>
-                            (Tham khảo <a rel="nofollow" href="https://tiki.vn/hau-mai" target="_blank">hướng dẫn đổi,
-                                trả, bảo hành</a> hoặc liên hệ <span class="number">1900-6035</span> để được hướng dẫn
-                            thêm)
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </address>
-
-        <div class="footer-cpy-right">
-            <div class="container">
-                <div class="cpy-right-info">
-                    <h5>© 2016 - Bản quyền của Công Ty Cổ Phần Ti Ki - Tiki.vn</h5>
-                    <p>Giấy chứng nhận Đăng ký Kinh doanh số 0309532909 do Sở Kế hoạch và Đầu tư Thành phố Hồ Chí Minh
-                        cấp ngày 06/01/2010</p>
-                </div>
-                <div class="cpy-right-info-right">
-                    <a href="https://hotro.tiki.vn/hc/vi/articles/115005575826" target="_blank">
-                        <img src="https://salt.tikicdn.com/ts/upload/3d/6c/27/216e535ff06b1b925796957a017cbedb.png"
-                            alt="" height="36px">
-                    </a>
-                    <a href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=21201" target="_blank">
-                        <img src="image/icon-footer/boCongThuong-icon.png" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- end footer -->
+    </div>
+    <!--End mc_embed_signup-->
+    <hr class="line-bg-body">
+   
+</footer>
+<!-- end footer -->
 
 </body>
 
